# PicoMidiController

./: CMakeLists.txt  Makefile  README.md  clear.cpp  control.cpp  main.cpp
